test/algeff/wrong/scoped1.kk.out
warning (line 25, column 3): using a bare operation is deprecated.
 hint: start with 'val', 'fun', 'except', or 'control' instead.
warning (line 29, column 19): keyword "fun" is deprecated. Consider using "fn" instead.
test/algeff/wrong/scoped1.kk(42,21): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead